bad/return_class_in_func_returning_array.example_compiler_output
ERROR
[1mbad/return_class_in_func_returning_array.lat:4:23: [1;31merror: [0;1mreturned value of type `Y` is not convertible to return type `int[]`[m
int[] test() { return new Y; }
                      [1;32m^[m
